--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -14,6 +14,8 @@
     justify-content: center;
     align-items: center;
     height: 85vh;
+    margin-top: 80px;
+    padding: 20px;
 }
 .contentStyle{
     justify-content: center;
